Changelog
=========

1.3.1 (Unreleased)
------------------
* Changed interface registration for Image and File views for Plone 3 to allow
  for p.a.blob image and file replacement types.
  [dunlapm]

* Updated Insert Current/New item menus to use Plone 4 methods for getting type
  icons when available.
  [dunlapm]


1.3.0-final (2010-10-22)
------------------------

* Add missing Products.Archetypes to setup dependencies.
  [thet]

* Show folderContents action in actions-viewlet for ColageColumns. This allows
  to browse and edit individual objects created in a collage column.
  [thet]

* Included new properties following 'rnix' and 'khink' new features in default
  setup profile and last upgrade step.
  [glenfant]

* Plone 3 support is back. No change for Plone 4
  [glenfant]

* Fix #85 - Add a new event break collage view [yboussard]

* Image and File layouts work with blob objects.
  [thomasdesvenain]

* Fixed many internationalizations.
  [thomasdesvenain]

* Updated french translations.
  [thomasdesvenain]

* Synched ``i18n/collage-xx.po`` files.
  [thomasdesvenain]

* Number of columns per batch is configurable via @@collage-controlpanel.
  Added support for 4- and 5-column layout (CSS and templates).
  [khink]

1.3.0-b4 (2010-04-06)
---------------------

* Fixed issue where layout viewlets would not be shown on Plone 4 due
  to an incorrect type assertion.

* The content type icon for Aliased content now appears with a border
  instead of the "alias" label.

* Fixed UI styling on Plone 4.

* Compatibility fix for Chameleon.

1.3.0-b3 (2010-02-04)
---------------------

* Plone 4 compatibility.
  [malthe]

* New icons.
  [malthe]

1.3.0-b2 (2010-01-17)
---------------------

* Added topic view which inherits the view setting from the topic
  content object (using a mapping to collage view names).
  [malthe]

* Added topic views for tabular and summary displays.
  [malthe]

* Fixed issue where you could not choose the standard layout if a